refactor : InitPathProvider 불변 리스트 반환으로 변경